Lib: cleanup gen_stubs

--- a/lib/js_of_ocaml/dune
+++ b/lib/js_of_ocaml/dune
@@ -10,7 +10,7 @@
  (deps (glob_files *.ml))
  (mode promote)
  (action (with-stdout-to %{targets}
-          (run ./gen_stubs/gen_stubs.exe %{deps}))))
+          (run ../gen_stubs/gen_stubs.exe %{deps}))))
 
 (rule
  (targets lib_version.ml)
