--- a/examples/separate_compilation/dune
+++ b/examples/separate_compilation/dune
@@ -20,13 +20,17 @@
   (action (run %{bin:js_of_ocaml} --pretty --source-map %{lib:stdlib:stdlib.cma} -o %{targets})))
 
 (rule
+  (targets std_exit.js)
+  (action (run %{bin:js_of_ocaml} --pretty --source-map %{lib:stdlib:std_exit.cmo} -o %{targets})))
+
+(rule
   (targets myruntime.js)
   (action (run %{bin:js_of_ocaml} build-runtime --pretty --source-map -o %{targets})))
 
 (rule
   (targets bin.js)
-  (action (run %{bin:js_of_ocaml} link %{dep:myruntime.js} %{dep:stdlib.js} %{dep:module1.js} %{dep:module2.js} -o %{targets})))
+  (action (run %{bin:js_of_ocaml} link %{dep:myruntime.js} %{dep:stdlib.js} %{dep:module1.js} %{dep:module2.js} %{dep:std_exit.js} -o %{targets})))
 
 (alias
   (name default)
-  (deps myruntime.js stdlib.js module1.js module2.js bin.js index.html))
+  (deps myruntime.js stdlib.js std_exit.js module1.js module2.js bin.js index.html))
