Port all PPX's to ppxlib
Before, the two extension node rewriters in the compiler and in ppx_js
were based on the omp driver and the omp Ast_mapper. The deriver in
ppx_deriving_json was already partly based on ppxlib, but also on
omp's Ast_408. All of those omp modules will be dropped in omp 2.0.0.

That's why this commit ports those 3 PPX's to ppxlib.

--- a/js_of_ocaml.opam
+++ b/js_of_ocaml.opam
@@ -16,10 +16,9 @@ name: "js_of_ocaml"
 build: [["dune" "build" "-p" name "-j" jobs]]
 
 depends: [
-  "ocaml" {>= "4.02.0"}
+  "ocaml" {>= "4.04.0"}
   "dune" {>= "2.5"}
-  "ocaml-migrate-parsetree" {>= "1.4"}
-  "ppx_tools_versioned" {>= "5.2.3"}
+  "ppxlib" {>= "0.15.0"}
   "uchar"
   "js_of_ocaml-compiler" {= version}
 ]
