--- a/compiler/ppx/dune
+++ b/compiler/ppx/dune
@@ -1,6 +1,6 @@
 (library
   (name ppx_optcomp_light)
   (libraries compiler-libs.common
-             ocaml-migrate-parsetree)
+             ppxlib)
   (kind ppx_rewriter)
   )
