--- a/js_of_ocaml-compiler.opam
+++ b/js_of_ocaml-compiler.opam
@@ -19,7 +19,7 @@ depends: [
   "ppx_expect" {with-test & >= "v0.12.0"}
   "cmdliner"
   "menhir"
-  "ocaml-migrate-parsetree"
+  "ppxlib" {>= "0.17.0"}
   "yojson" # It's optional, but we want users to be able to use source-map without pain.
 ]
 
