--- a/js_of_ocaml-ppx.opam
+++ b/js_of_ocaml-ppx.opam
@@ -14,9 +14,8 @@ environment like browsers and Node.js
 build: [["dune" "build" "-p" name "-j" jobs]]
 
 depends: [
-  "ocaml" {>= "4.02.0"}
+  "ocaml" {>= "4.04.0"}
   "dune" {>= "2.5"}
-  "ocaml-migrate-parsetree" {>= "1.4"}
-  "ppx_tools_versioned" {>= "5.2.3"}
+  "ppxlib" {>= "0.15.0"}
   "js_of_ocaml" {= version}
 ]
