--- a/toplevel/lib/dune
+++ b/toplevel/lib/dune
@@ -4,5 +4,6 @@
   (synopsis "Js_of_ocaml toplevel library")
   (libraries
     js_of_ocaml-compiler js_of_ocaml bytes
-    compiler-libs.bytecomp compiler-libs.toplevel)
+    compiler-libs.bytecomp compiler-libs.toplevel
+    ppxlib)
   (preprocess (pps js_of_ocaml-ppx)))
