--- a/js_of_ocaml-ppx_deriving_json.opam
+++ b/js_of_ocaml-ppx_deriving_json.opam
@@ -18,5 +18,5 @@ depends: [
   "dune" {>= "2.5"}
   "js_of_ocaml" {= version}
   "ocaml-migrate-parsetree"
-  "ppxlib" {>= "0.9.0" & < "0.14.0"}
+  "ppxlib" {>= "0.14.0"}
 ]
