--- a/js_of_ocaml-ppx_deriving_json.opam
+++ b/js_of_ocaml-ppx_deriving_json.opam
@@ -17,6 +17,6 @@ depends: [
   "ocaml" {>= "4.04.1"}
   "dune" {>= "2.5"}
   "js_of_ocaml" {= version}
-  "ocaml-migrate-parsetree"
+  "ocaml-migrate-parsetree" {< "2.0.0"}
   "ppxlib" {>= "0.14.0"}
 ]
