--- a/js_of_ocaml.opam
+++ b/js_of_ocaml.opam
@@ -18,7 +18,7 @@ build: [["dune" "build" "-p" name "-j" jobs]]
 depends: [
   "ocaml" {>= "4.04.0"}
   "dune" {>= "2.5"}
-  "ppxlib" {>= "0.15.0"}
+  "ppxlib" {>= "0.15.0" & < "0.18.0"}
   "uchar"
   "js_of_ocaml-compiler" {= version}
 ]
