--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,9 @@ jobs:
       - run: brew install xquartz --cask
         if: ${{ matrix.os == 'macos-latest' }}
 
+      - run: opam depext conf-pkg-config conf-gmp
+        if: ${{ matrix.os == 'windows-latest' }}
+
       - run: opam install . --best-effort
         if: ${{ matrix.ocaml-version != '4.12.x' }}
 
