Set opam-depext-flags
Signed-off-by: Sora Morimoto <sora@morimoto.io>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,12 +46,7 @@ jobs:
           ocaml-version: ${{ matrix.ocaml-version }}
           dune-cache: ${{ matrix.os == 'ubuntu-latest' }}
           opam-depext: ${{ matrix.ocaml-version != '4.02.x' && matrix.ocaml-version != '4.03.x' }}
-
-      - run: brew install xquartz --cask
-        if: ${{ matrix.os == 'macos-latest' }}
-
-      - run: opam depext conf-pkg-config conf-gmp
-        if: ${{ matrix.os == 'windows-latest' }}
+          opam-depext-flags: --with-test
 
       - run: opam install . --best-effort
         if: ${{ matrix.ocaml-version != '4.12.x' }}
