Add tests for float operations

--- a/compiler/tests-jsoo/dune
+++ b/compiler/tests-jsoo/dune
@@ -4,5 +4,5 @@
  (foreign_stubs (language c)(names bigarray_stubs))
  (inline_tests
   (flags -allow-output-patterns)
-  (modes js native))
+  (modes js))
  (preprocess (pps ppx_expect)))
