--- a/toplevel/test/dune
+++ b/toplevel/test/dune
@@ -1,6 +1,6 @@
 (executables
  (names test_toplevel)
- (libraries js_of_ocaml_toplevel)
+ (libraries js_of_ocaml js_of_ocaml_toplevel)
  (flags (:standard -linkall))
  (modes byte))
 
@@ -32,7 +32,7 @@
 (rule
   (target test_toplevel.referencejs)
   (deps test_toplevel.js)
-  (action (with-outputs-to %{target} (run node ./test_toplevel.js))))
+  (action (with-stdout-to %{target} (run node ./test_toplevel.js))))
 
 (rule
   (alias runtest)
