--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,24 @@ jobs:
           - 4.09.x
           - 4.10.x
           - 4.11.x
-          - 4.12.x
-          - 4.13.x
+        skip-test:
+          - true
         include:
+          - os: ubuntu-latest
+            ocaml-compiler: 4.12.x
+            skip-test: false
+          - os: macos-latest
+            ocaml-compiler: 4.12.x
+            skip-test: false
+          - os: windows-latest
+            ocaml-compiler: 4.12.x
+            skip-test: false
+          - os: ubuntu-latest
+            ocaml-compiler: 4.13.x
+            skip-test: false
           - os: macos-latest
             ocaml-compiler: 4.13.x
-          - os: windows-latest
-            ocaml-compiler: 4.13.x
+            skip-test: false
 
     runs-on: ${{ matrix.os }}
 
@@ -52,20 +63,20 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
           dune-cache: true
-          opam-depext: ${{ matrix.ocaml-compiler == '4.13.x' }}
+          opam-depext: ${{ !matrix.skip-test }}
           opam-depext-flags: --with-test
 
       - run: opam install . --best-effort
-        if: ${{ matrix.ocaml-compiler != '4.13.x' }}
+        if: ${{ matrix.skip-test }}
 
       - run: opam install . --with-test
-        if: ${{ matrix.ocaml-compiler == '4.13.x' }}
+        if: ${{ !matrix.skip-test }}
 
       - run: opam exec -- make all
-        if: ${{ matrix.ocaml-compiler == '4.13.x' }}
+        if: ${{ !matrix.skip-test }}
 
       - run: opam exec -- make tests
-        if: ${{ matrix.ocaml-compiler == '4.13.x' }}
+        if: ${{ !matrix.skip-test }}
 
       - run: opam exec -- git diff --exit-code
         if: ${{ matrix.ocaml-compiler == '4.13.x' }}
